--- a/hello.html
+++ b/hello.html
@@ -7,22 +7,27 @@
     <title>Van Gogh Art Gallery</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
 <body>
-    <header>
+    <header class="header">
+        <a href="" class="logo">LOGO</a>
+
+        <input type="checkbox" id="check">
+        <label for="check" class="icons">
+            <i class='bx bx-menu' id="menu-icon"></i>
+            <i class="bx bx-x" id="close-icon"></i>
+        </label>
         <nav>
-
-            <h3 class="logo">Van Gogh Art Gallery</h3>
-            <ul>
-                <li>Συλλογή</li>
-                <li>Βιογραφία</li>
-                <li>Εκθέσεις</li>
-                <li>Εισητήρια</li>
-            </ul>
-
+            <a href="">αρχικη</a>
+            <a href="">βιογραφια</a>
+            <a href="">εισητηρια</a>
+            <a href="">εκθεσεις</a>
+            <a href="">επικοινωνια</a>
         </nav>
     </header>
+
 
     <div id="carouselExample" class="carousel slide carousel-fade">
         <div class="carousel-indicators">
