--- a/main_page.html
+++ b/main_page.html
@@ -106,7 +106,7 @@
 
                 <div id="skopos">
                     <h1><strong><p id="paula2">|</p> Σκοπός</strong></h1>
-                    <p>Στόχος του οργανισμού μας είναι η γνωριμία των επισκεπτών με τα έργα του Van Gogh, η γνώση της τέχνης του με σκοπό αυτή να προκαλέσει έντονη συναισθηματική ανταπόκριση στους θεατές, καθώς και ένα ερέθισμα για περαιτέρω ενασχόληση και μελέτη της ζωγραφικής, η οποία μέχρι σήμερα αποτελεί από τους σημαντικότερους πυλώνες της τέχνης.</p>
+                    <p>Στόχος του οργανισμού μας είναι η γνωριμία των επισκεπτών με τα έργα του Van Gogh, η γνώση της τέχνης του με σκοπό αυτή να προκαλέσει έντονη συναισθηματική ανταπόκριση στους θεατές, καθώς και ένα ερέθισμα για περαιτέρω ενασχόληση και μελέτη της ζωγραφικής, η οποία μέχρι σήμερα αποτελεί έναν από τους σημαντικότερους πυλώνες της τέχνης.</p>
                 </div>
             </div>
             <div id="quote">
@@ -220,7 +220,7 @@
                         <div class="second-date">
                             <div class="number">2</div>
                             <div class="day">
-                                <p><strong>ΙΟΥΛ 2024</strong></p>
+                                <p><strong>ΑΥΓ 2024</strong></p>
                                 <p><strong>ΠΑΡΑΣΚΕΥΗ</strong></p>
 
                             </div>
