--- a/main_page.html
+++ b/main_page.html
@@ -173,71 +173,77 @@
             </div>
 
             <div class="container" id="events-body">
-                <div class="date">
-                    <div class="duration date">
-                        <div class="first-date">
-                            <div class="number">1</div>
-                            <div class="day">
-                                <p><strong>ΙΟΥΝ 2024</strong></p>
-                                <p><strong>ΣΑΒΒΑΤΟ</strong></p>
+                <div id="first-exhibition">
+                    <div class="date">
+                        <div class="duration date">
+                            <div class="first-date">
+                                <div class="number">1</div>
+                                <div class="day">
+                                    <p><strong>ΙΟΥΝ 2024</strong></p>
+                                    <p><strong>ΣΑΒΒΑΤΟ</strong></p>
 
+                                </div>
                             </div>
-                        </div>
-                        <div class="seperator">
-                            <hr>
-                        </div>
-                        <div class="second-date">
-                            <div class="number">16</div>
-                            <div class="day">
-                                <p><strong>ΙΟΥΛ 2024</strong></p>
-                                <p><strong>ΤΡΙΤΗ</strong></p>
-
+                            <div class="seperator">
+                                <hr>
                             </div>
-                        </div>
-                    </div>
-                </div>
-                <div id="hundred-erga">
-                    <h4><strong>Τα πρώτα εκατό έργα του Van Gogh</strong></h4>
-                    <img src="https://iiif.micr.io/wztKL/full/1800,/0/default.webp">
-                    <p>Η συγκεκριμένη έκθεση παρουσιάζει τους πίνακες που
-                         αποτέλεσαν την αρχή της καριέρας του Vincent Van Gogh
-                         με λεπτομερή περιγραφή του καθενός.</p>
-                    <a href="#erga"><em>Μάθετε περισσότερα&gt;&gt;</em></a>
-                </div>
-                <div class="date" id="sec-date">
-                    <div class="duration date">
-                        <div class="first-date">
-                            <div class="number">22</div>
-                            <div class="day">
-                                <p><strong>ΙΟΥΛ 2024</strong></p>
-                                <p><strong>ΔΕΥΤΕΡΑ</strong></p>
+                            <div class="second-date">
+                                <div class="number">16</div>
+                                <div class="day">
+                                    <p><strong>ΙΟΥΛ 2024</strong></p>
+                                    <p><strong>ΤΡΙΤΗ</strong></p>
 
-                            </div>
-                        </div>
-                        <div class="seperator">
-                            <hr>
-                        </div>
-                        <div class="second-date">
-                            <div class="number">2</div>
-                            <div class="day">
-                                <p><strong>ΑΥΓ 2024</strong></p>
-                                <p><strong>ΠΑΡΑΣΚΕΥΗ</strong></p>
-
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div id="afierwma">
-                    <h4><strong>Αφιέρωμα στον Paul Gauguin</strong></h4>
-                    <img src="https://cdn.britannica.com/30/166230-050-1577BF77/Self-portrait-oil-wood-Paul-Gauguin-Chester-Dale-1889.jpg">
 
+                    <div id="hundred-erga">
+                        <h4><strong>Τα πρώτα εκατό έργα του Van Gogh</strong></h4>
+                        <img src="https://iiif.micr.io/wztKL/full/1800,/0/default.webp">
+                        <p>Η συγκεκριμένη έκθεση παρουσιάζει τους πίνακες που
+                            αποτέλεσαν την αρχή της καριέρας του Vincent Van Gogh
+                            με λεπτομερή περιγραφή του καθενός.</p>
+                        <a href="#erga"><em>Μάθετε περισσότερα&gt;&gt;</em></a>
+                    </div>
                 </div>
+                <div id="sec-exhibition">
+                    <div class="date" id="sec-date">
+                        <div class="duration date">
+                            <div class="first-date">
+                                <div class="number">22</div>
+                                <div class="day">
+                                    <p><strong>ΙΟΥΛ 2024</strong></p>
+                                    <p><strong>ΔΕΥΤΕΡΑ</strong></p>
 
-                <div id="paul-text">
-                    <p>O Paul ήταν ένας πολύ κοντινός φίλος του Van Gogh και εκπρόσωπος του ρεύματος του μεταϊμπρεσιονισμού που επηρέασε τα ρεύματα της μοντέρνας τέχνης. Το αφιέρωμα αυτό περιλαμβάνει τα δημοφιλέστερα έργα ενός απ’ τους σημαντικότερους (όπως θεωρήθηκε) ζωγράφους των δύο τελευταίων αιώνων.</p>
-                    <a href="#erga"><em>Μάθετε περισσότερα&gt;&gt;</em></a>
+                                </div>
+                            </div>
+                            <div class="seperator">
+                                <hr>
+                            </div>
+                            <div class="second-date">
+                                <div class="number">2</div>
+                                <div class="day">
+                                    <p><strong>ΑΥΓ 2024</strong></p>
+                                    <p><strong>ΠΑΡΑΣΚΕΥΗ</strong></p>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="afierwma">
+                        <h4><strong>Αφιέρωμα στον Paul Gauguin</strong></h4>
+                        <img src="https://cdn.britannica.com/30/166230-050-1577BF77/Self-portrait-oil-wood-Paul-Gauguin-Chester-Dale-1889.jpg">
+
+                    </div>
+
+                    <div id="paul-text">
+                        <p>O Paul ήταν ένας πολύ κοντινός φίλος του Van Gogh και εκπρόσωπος του ρεύματος του μεταϊμπρεσιονισμού που επηρέασε τα ρεύματα της μοντέρνας τέχνης. Το αφιέρωμα αυτό περιλαμβάνει τα δημοφιλέστερα έργα ενός απ’ τους σημαντικότερους (όπως θεωρήθηκε) ζωγράφους των δύο τελευταίων αιώνων.</p>
+                        <a href="#erga"><em>Μάθετε περισσότερα&gt;&gt;</em></a>
+                    </div>
                 </div>
             </div>
+
 
         </article>
 
