bio page earliest paintings

--- a/biography.html
+++ b/biography.html
@@ -36,7 +36,7 @@
             <div class="overlay-text">
                 <h2><strong>Earliest Paintings</strong></h2>
                 <h3><strong>(1881-1883)</strong></h3>
-                <a href="#bio_1">Discover more-&gt;</a>
+                <a href="bio_page1.html">Discover more-&gt;</a>
             </div>
         </div>
 
