second page bio

--- a/biography.html
+++ b/biography.html
@@ -45,7 +45,7 @@
             <div class="overlay-text">
                 <h2><strong>Nuenen / Antwerp</strong></h2>
                 <h3><strong>(1883-1886)</strong></h3>
-                <a href="#bio_2">Discover more-&gt;</a>
+                <a href="bio_page_2.html">Discover more-&gt;</a>
             </div>
         </div>
 
