bio page 3 kai 4

--- a/biography.html
+++ b/biography.html
@@ -54,7 +54,7 @@
             <div class="overlay-text">
                 <h2><strong>Paris</strong></h2>
                 <h3><strong>(1886-1888)</strong></h3>
-                <a href="#bio_3">Discover more-&gt;</a>
+                <a href="bio_page3.html">Discover more-&gt;</a>
             </div>
         </div>
 
@@ -63,7 +63,7 @@
             <div class="overlay-text">
                 <h2><strong>Arles</strong></h2>
                 <h3><strong>(1888-1889)</strong></h3>
-                <a href="#bio_4">Discover more-&gt;</a>
+                <a href="bio_page4.html">Discover more-&gt;</a>
             </div>
         </div>
 
