some minor changes

--- a/hello.html
+++ b/hello.html
@@ -20,7 +20,7 @@
             <i class="bx bx-x" id="close-icon"></i>
         </label>
         <nav>
-            <a href="">αρχικη</a>
+            <a href="">συλλογη</a>
             <a href="">βιογραφια</a>
             <a href="">εισιτηρια</a>
             <a href="">εκθεσεις</a>
@@ -145,9 +145,9 @@
             </div>
         </div>
 
-    </article>
 
-    <article class="bio">
+
+
 
         <div class="container" id="self2">
             <div class="text">
