--- a/biography.html
+++ b/biography.html
@@ -72,7 +72,7 @@
             <div class="overlay-text">
                 <h2><strong>Saint-Remy</strong></h2>
                 <h3><strong>(1889-1890)</strong></h3>
-                <a href="#bio_5">Discover more-&gt;</a>
+                <a href="bio_page5.html">Discover more-&gt;</a>
             </div>
         </div>
 
@@ -81,7 +81,7 @@
             <div class="overlay-text">
                 <h2><strong>Auvers-sur-Oise</strong></h2>
                 <h3><strong>(1890)</strong></h3>
-                <a href="#bio_6">Discover more-&gt;</a>
+                <a href="bio_page6.html">Discover more-&gt;</a>
             </div>
         </div>
     </section>
